fix split_view leak navigator content when push page -> make it overflow hidden

--- a/framework/css/split_view.css
+++ b/framework/css/split_view.css
@@ -17,10 +17,11 @@ limitations under the License.
 
 .secondary {
     transform: translate3d(-10%, 0, 0);
+    overflow: hidden;
 }
 
 .main {
-    
+    overflow: hidden;
 }
 
 .onsen_split-view__shadow {
